--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,11 @@
     margin: 0px;
 }
 
+.section-articles .articles-wrapper{
+    display: flex;
+    margin-left: 20px;
+}
+
 .section-card h1{
     text-align: center;
 }
@@ -71,5 +76,12 @@
 
 .newsletter-content{
     color: white;
-    text-align: center;
+}
+
+.newsletter-content h4{
+    font-size: 52px;
+}
+
+.newsletter-content p{
+    font-size: 22px;
 }
