--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,66 @@
 @font-face {
-    font-family: "HKGrotesk";
-    src: url('assets/HKgrotesque/HKGrotesk-Regular.otf');
+	font-family: HK-Grotesk-Regular;
+	src: url('/assets/HKgrotesque/HKGrotesk-Regular.otf') format('opentype');
 }
 
 body{
     margin: 0px;
+    font-family: HK-Grotesk-Regular;
 }
 
+.header-content{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+    margin-top: 10px;
+}
+
+.header-meteo{
+    float: left;
+    margin-left: 10%;
+    margin-top: 5%;
+}
+
+.header-meteo h6{
+    margin: 0px;
+    color: #003B5C;
+    font-size: 12px;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    line-height: 15px;
+    letter-spacing: 0.342857px;
+}
+
+.header-meteo p{
+
+    margin: 0px;
+    font-size: 12px;
+    line-height: 15px;
+    letter-spacing: 0.342857px;
+
+    color: rgba(93, 83, 79, 0.6);
+}
+
+.header-meteo img{
+    float: left;
+    padding: 5px;
+}
 
 .header-logo{
     text-align: center;
+}
+
+.header-insta{
+    float: right;
+    margin-right: 10%;
+    margin-left: 20%;
+    margin-top: 5%;
+    justify-content: center;
+}
+
+.header-insta a{
+    text-decoration: none;
+    color: #003B5C;
+    padding: 20px;
 }
 
 .header-nav{
@@ -43,7 +94,6 @@ body{
 .articles-item{
     padding: 10px;
 }
-
 
 .articles-img img{
     width: 100%;
@@ -90,6 +140,9 @@ body{
 
 .card-title{
     background-repeat: no-repeat;
+    background-size: cover;
+    margin-left: 2%;
+    margin-right: 2%;
 }
 
 .card-title h1{
@@ -102,7 +155,13 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+}
 
+.card-menu-link{
+    position: relative;
+    float: right;
+    margin-right: 10px;
+    bottom: 15px;
 }
 
 .card-menu-link a{
@@ -185,7 +244,7 @@ body{
 }
 
 .newsletter-link{
-    margin-top: 50px;
+    padding-top: 30px;
 }
 
 .footer-main{
